--- a/app/app/src/main/res/layout/frag_results.xml
+++ b/app/app/src/main/res/layout/frag_results.xml
@@ -5,6 +5,7 @@
 
 
     <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/confetti"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/confetti"
