--- a/app/app/src/main/res/layout-land/frag_bet.xml
+++ b/app/app/src/main/res/layout-land/frag_bet.xml
@@ -6,56 +6,59 @@
     android:background="@android:color/transparent">
 
 
-
-
     <LinearLayout
+        android:id="@+id/loader"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:id="@+id/loader"
-        android:orientation="vertical"
-        android:visibility="invisible"
         android:layout_marginBottom="30dp"
-        >
+        android:orientation="vertical"
+        android:visibility="invisible">
+
         <pl.droidsonroids.gif.GifImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="80dp"
             android:src="@drawable/loader" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="-30dp"
+            android:text="Waiting for your opponent..."
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="25sp"
-            android:text="Waiting for your opponent..."
-            android:textStyle="bold"
-            android:layout_marginTop="-30dp"/>
+            android:textStyle="bold" />
 
 
     </LinearLayout>
 
 
+    <RelativeLayout
+        android:id="@+id/bet_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/bet_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
             android:text="@string/_0"
             android:textColor="@color/white"
             android:textSize="50sp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"/>
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/chips_grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:useDefaultMargins="true"
-            android:gravity="center"
             android:layout_above="@+id/userBar"
-            android:layout_marginBottom="-5dp">
+            android:layout_marginBottom="-5dp"
+            android:gravity="center"
+            android:useDefaultMargins="true">
 
             <ImageButton
                 android:id="@+id/poker_chip_5"
@@ -116,10 +119,10 @@
             android:id="@+id/userBar"
             android:layout_width="match_parent"
             android:layout_height="68dp"
+            android:layout_alignParentBottom="true"
             android:layout_marginStart="-50dp"
             android:layout_marginEnd="-50dp"
             android:layout_marginBottom="-5dp"
-            android:layout_alignParentBottom="true"
             android:scaleType="fitXY"
             app:srcCompat="@drawable/purple_frame" />
 
@@ -131,10 +134,10 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="20dp"
             android:layout_marginBottom="15dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
             android:text="oi"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/balance"
@@ -144,11 +147,11 @@
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="15dp"
-            android:textSize="25sp"
-            android:textStyle="bold"
             android:text="oi"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
-
+    </RelativeLayout>
 
 </RelativeLayout>
