--- a/app/app/src/main/res/layout/frag_results.xml
+++ b/app/app/src/main/res/layout/frag_results.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/confetti"
+        android:layout_margin="-100dp"
         android:visibility="invisible"/>
 
 
