--- a/app/app/src/main/res/layout/frag_bet.xml
+++ b/app/app/src/main/res/layout/frag_bet.xml
@@ -34,7 +34,7 @@
 
     </LinearLayout>
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/userBar"
         android:layout_width="match_parent"
         android:layout_height="68dp"
@@ -43,7 +43,7 @@
         android:layout_marginBottom="-5dp"
         android:layout_alignParentBottom="true"
         android:scaleType="fitXY"
-        app:srcCompat="@drawable/purple_frame" />
+        app:srcCompat="@drawable/purple_frame" />-->
 
     <TextView
         android:id="@+id/username"
